--- a/klipper-config/macros.cfg
+++ b/klipper-config/macros.cfg
@@ -1,11 +1,14 @@
 #####################################################################
-#	Start, end, pause, resume, cancel macros
+#	Print control macros
 #####################################################################
 
 
 [gcode_macro PRINT_START]
+    # Parameters for area bed mesh
+variable_parameter_AREA_START : 0,0
+variable_parameter_AREA_END : 0,0
 gcode:
-    # Parameters
+    # Parameters for heating
     {% set bedtemp = params.BED|int %}
     {% set hotendtemp = params.HOTEND|int %}
     {% set chambertemp = params.CHAMBER|default(0)|int %}
@@ -19,11 +22,11 @@ gcode:
     M190 S{bedtemp}                                                                ; set & wait for bed temp
     M117 Bed heated
     M204 S{printer.configfile.settings.printer.max_accel}                          ; reset base acceleration
-    {% if printer.toolhead.homed_axes != 'xyz' %}                                  ; IF homes aren't already homed, home them
+    {% if printer.toolhead.homed_axes != 'xyz' %}                                  ; IF axes aren't already homed, home them
 		G28			                                                               
 	{% endif %}
     QUAD_GANTRY_LEVEL
-    BED_MESH_CALIBRATE                                                             ; turn off for TPU     
+    BED_MESH_CALIBRATE AREA_START={params.AREA_START|default("0,0")} AREA_END={params.AREA_END|default("0,0")} ; turn off for TPU     
     CLEAN_NOZZLE PURGE=0
     M117 Z-home
     G28 Z
@@ -71,8 +74,6 @@ gcode:
     M117
     SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}    ; set idle timeout to default
 
-[virtual_sdcard]
-path: /home/pi/gcode_files
 
 [pause_resume]
 
@@ -92,6 +93,7 @@ gcode:
     SET_FAN_SPEED FAN=exhaust SPEED=0                                           ; turn off exhaust fans
     STATUS_READY
     G90
+    M117
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
@@ -234,6 +236,131 @@ gcode:
 gcode:
     G0 X125 Y245 Z200 F5000
 
+[gcode_macro BED_MESH_CALIBRATE]
+rename_existing: BED_MESH_CALIBRATE_BASE
+gcode:
+    _CheckProbe action=query
+    G90
+    Attach_Probe
+    {% set mesh_delta = 25 %} ;; distance between points
+    {% set x_mesh_max = 7 %} ;; max points on x-axis
+    {% set y_mesh_max = 7 %} ;; max points on y-axis
+    {% set mesh_area_offset = 0 %};; the clearance between print area and probe area
+    {% set parameter_AREA_START = "0,0" %} ;; gcode parameter to be defined by slicer
+    {% set parameter_AREA_END = "0,0" %} ;; gcode parameter to be defined by slicer
+    {% if params.AREA_START and params.AREA_END %}
+
+        ;; get [bed_mesh] config parameters
+        {% set bedMeshConfig = printer["configfile"].config["bed_mesh"] %}
+        {% set mesh_algorithm = bedMeshConfig.algorithm %}
+        {% set mesh_bicubic_tension = bedMeshConfig.bicubic_tension|float %}
+        {% set safe_min_x = bedMeshConfig.mesh_min.split(",")[0]|float %}
+        {% set safe_min_y = bedMeshConfig.mesh_min.split(",")[1]|float %}
+        {% set safe_max_x = bedMeshConfig.mesh_max.split(",")[0]|float %}
+        {% set safe_max_y = bedMeshConfig.mesh_max.split(",")[1]|float %}
+        {% set meshPointX = bedMeshConfig.probe_count.split(",")[0]|int %}
+        {% set meshPointY = bedMeshConfig.probe_count.split(",")[1]|int %}
+        {% set meshMaxPointX = meshPointX %}
+        {% set meshMaxPointY = meshPointY %}
+
+        ;; get print area min/max from slicer gcode
+        {% set area_min_x = params.AREA_START.split(",")[0]|float %}
+        {% set area_min_y = params.AREA_START.split(",")[1]|float %}
+        {% set area_max_x = params.AREA_END.split(",")[0]|float %}
+        {% set area_max_y = params.AREA_END.split(",")[1]|float %}
+
+        ;; check if print area min/max from slicer gcode is compatable with [bed_mesh] min/max
+        {% if (area_min_x < area_max_x) and (area_min_y < area_max_y) %}
+        ;; set probing area
+            {% if area_min_x - mesh_area_offset >= safe_min_x %}
+                {% set area_min_x = area_min_x - mesh_area_offset %}
+            {% else %}
+                {% set area_min_x = safe_min_x %}
+            {% endif %}
+            {% if area_min_y - mesh_area_offset >= safe_min_y %}
+                {% set area_min_y = area_min_y - mesh_area_offset %}
+            {% else %}
+                {% set area_min_y = safe_min_y %}
+            {% endif %}
+            {% if area_max_x + mesh_area_offset <= safe_max_x %}
+                {% set area_max_x = area_max_x + mesh_area_offset %}
+            {% else %}
+                {% set area_max_x = safe_max_x %}
+            {% endif %}
+            {% if area_max_y + mesh_area_offset <= safe_max_y %}
+                {% set area_max_y = area_max_y + mesh_area_offset %}
+            {% else %}
+                {% set area_max_y = safe_max_y %}
+            {% endif %}
+
+                ;; set probe counts
+            {% if (area_max_x - area_min_x) / 3 < mesh_delta %}
+                {% set meshPointX = 3 %}
+            {% elif (area_max_x - area_min_x) / 5 < mesh_delta %}
+                {% set meshPointX = 5 %}
+            {% elif (area_max_x - area_min_x) / 7 < mesh_delta %}
+                {% set meshPointX = 7 %}
+            {% elif (area_max_x - area_min_x) / 9 < mesh_delta %}
+                {% set meshPointX = 9 %}
+            {% elif (area_max_x - area_min_x) / 11 < mesh_delta %}
+                {% set meshPointX = 11 %}
+            {% endif %}
+            {% if (area_max_y - area_min_y) / 3 < mesh_delta %}
+                {% set meshPointY = 3 %}
+            {% elif (area_max_y - area_min_y) / 5 < mesh_delta %}
+                {% set meshPointY = 5 %}
+            {% elif (area_max_y - area_min_y) / 7 < mesh_delta %}
+                {% set meshPointY = 7 %}
+            {% elif (area_max_y - area_min_y) / 9 < mesh_delta %}
+                {% set meshPointY = 9 %}
+            {% elif (area_max_y - area_min_y) / 11 < mesh_delta %}
+                {% set meshPointY = 11 %}
+            {% endif %}
+
+                ;; check probe count vs max
+            {% if meshPointX > x_mesh_max %}
+                {% set meshPointX = x_mesh_max %}
+            {% endif %}
+            {% if meshPointY > y_mesh_max %}
+                {% set meshPointY = y_mesh_max %}
+            {% endif %}
+
+                ;; check for 7x3 or 3x7 mesh
+            {% if meshPointX > 5 %}
+                {% if meshPointY == 3 %} # 7x3 mesh invlaid for bicubic
+                    {% set meshPointY = 5 %} # set 7x5 mesh
+                {% endif %}
+            {% endif %}
+            {% if meshPointY > 5 %}
+                {% if meshPointX == 3 %} # 3x7 mesh invlaid for bicubic
+                    {% set meshPointX = 5 %} # set 5x7 mesh
+                {% endif %}
+            {% endif %}
+
+            ;; set new reference index point
+            {% set referenceIndex = (meshPointX * meshPointY / 2 - 1 )|round(0)|int %}
+
+            ;; send bed mesh parameters
+            M117 Mesh {meshPointX}x{meshPointY}
+            M118 Mesh {meshPointX}x{meshPointY}
+            BED_MESH_CALIBRATE_BASE mesh_min={area_min_x},{area_min_y} mesh_max={area_max_x},{area_max_y} probe_count={meshPointX},{meshPointY} relative_reference_index={referenceIndex} algorithm={mesh_algorithm}
+            DOCK_PROBE
+        {% else %}
+            _CheckProbe action=query
+            G90
+            Attach_Probe
+            BED_MESH_CALIBRATE_BASE
+            DOCK_PROBE
+        {% endif %}
+    {% else %}
+            _CheckProbe action=query
+            G90
+            Attach_Probe
+            BED_MESH_CALIBRATE_BASE
+            DOCK_PROBE
+    {% endif %}
+
+
 
 [gcode_macro TEST_SPEED]
 # Home, get position, throw around toolhead, home again.
@@ -309,6 +436,7 @@ gcode:
 
 	# Restore previous gcode state (absolute/relative, etc)
 	RESTORE_GCODE_STATE NAME=TEST_SPEED
+
 
 #####################################################################
 #	LED Macros
