--- a/klipper-config/printer.cfg
+++ b/klipper-config/printer.cfg
@@ -7,15 +7,27 @@
 [include z_calibration.cfg]
 [include nozzle_scrub.cfg]
 [include stealthburner_leds.cfg]
+[include bedfans.cfg]
+
+[virtual_sdcard]
+path: /home/pi/gcode_files
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3B0032000250563046353420-if00
 
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
+[mcu sht36]
+canbus_uuid: b298aad790bd #2
+#8592eecb927d #1
 
 [adxl345]
-cs_pin: rpi:None
+cs_pin: sht36:PA4
+spi_bus: spi1
+
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
+
+#[adxl345]
+#cs_pin: rpi:None
 
 [resonance_tester]
 accel_chip: adxl345
@@ -46,7 +58,7 @@ enable_pin: !PE9
 rotation_distance: 40
 microsteps: 16
 full_steps_per_rotation:400  #set to 400 for 0.9 degree stepper
-endstop_pin: ^PA1
+endstop_pin: sht36:PA1
 position_min: 0
 position_endstop: 252
 position_max: 252
@@ -96,7 +108,7 @@ dir_pin: !PD13
 enable_pin: !PD15
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 32
 ##  In Z- Position
 endstop_pin: ^PA0
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
@@ -126,7 +138,7 @@ dir_pin: PC13
 enable_pin: !PE5
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 32
 
 
 [tmc2209 stepper_z1]
@@ -144,7 +156,7 @@ dir_pin: !PE4
 enable_pin: !PE3
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 32
 
 
 [tmc2209 stepper_z2]
@@ -162,7 +174,7 @@ dir_pin: PC4
 enable_pin: !PE8
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 32
 
 [tmc2209 stepper_z3]
 uart_pin: PA15
@@ -175,25 +187,25 @@ stealthchop_threshold: 0
 #   Extruder
 #####################################################################
 
-##	In E0-MOT Position
 [extruder]
-step_pin: PD5
-dir_pin: !PD6
-enable_pin: !PD4
+step_pin: sht36:PB4 #PD5
+dir_pin: sht36:PB3  #!PD6
+enable_pin: !sht36:PA15 #!PD4
 rotation_distance: 22.0653
 gear_ratio: 50:10
 microsteps: 16
 full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.75
-##  In E0 OUT Position
-heater_pin: PB15
+
+heater_pin: sht36:PA8
 sensor_type: ATC Semitec 104GT-2
-sensor_pin: PC2 
+pullup_resistor: 2200
+sensor_pin: sht36:PB0 
 min_temp: 10
-max_temp: 280
+max_temp: 300
 max_power: 1.0
-min_extrude_temp: 170
+min_extrude_temp: 10
 max_extrude_only_distance: 100.0
 #control = pid
 #pid_kp = 26.213
@@ -217,7 +229,7 @@ pressure_advance_smooth_time: 0.020
 
 ##	In E0-MOT Position
 [tmc2209 extruder]
-uart_pin: PD7
+uart_pin: sht36:PB5 #PD7
 interpolate: false
 run_current: 0.4
 sense_resistor: 0.110
@@ -237,9 +249,9 @@ runout_gcode:
 #####################################################################
 
 [input_shaper]
-shaper_freq_x: 51
-shaper_freq_y: 59.6
-shaper_type: ei
+shaper_freq_x: 38
+shaper_freq_y: 46.8
+shaper_type: mzv
 
 #####################################################################
 #   Bed Heater
@@ -252,7 +264,7 @@ sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: PC3
 max_power: 0.7
 min_temp: 0
-max_temp: 120
+max_temp: 130
 #control: pid
 #pid_kp: 58.437
 #pid_ki: 2.347
@@ -260,31 +272,64 @@ max_temp: 120
 
 
 #####################################################################
+#	Temperature sensors
+#####################################################################
+
+[temperature_sensor FLY-SHT36]
+sensor_type: temperature_mcu
+sensor_mcu: sht36
+
+[temperature_sensor raspberry_pi]
+sensor_type: temperature_host
+
+#[temperature_sensor Spider]
+#sensor_type: temperature_mcu
+
+[temperature_sensor chamber]
+sensor_type: NTC 100K MGB18-104F39050L32
+sensor_pin: PC1
+min_temp: 0
+max_temp: 80
+
+#####################################################################
 #	Fan Control
 #####################################################################
 
 [duplicate_pin_override]
-pins: ADC_TEMPERATURE, PC1, PC3
+pins: ADC_TEMPERATURE, PC1, PC3, temperature_mcu
 
-[heater_fan hotend_fan]
-##	Hotend Fan - In E2 Heater 
-pin: PB0
+[heater_fan hotend_fan] 
+pin: sht36:PB11
 max_power: 1.0
 heater: extruder
 heater_temp: 60.0
 
 [fan]
-##	Print Cooling Fan - FAN1 Connector
-pin: PB1
+pin: sht36:PB10
 max_power: 1.0
 kick_start_time: 0.2
 off_below: 0.10
 shutdown_speed:0
 cycle_time:0.01
 
-[temperature_fan spider]
-##	Controller fan - FAN2 Connector
-pin: PB2
+[fan_generic exhaust]
+pin: PB0
+max_power: 1.0
+shutdown_speed: 0.0
+kick_start_time: 0.2
+
+[temperature_fan drivers]
+pin: PB1
+sensor_type: temperature_mcu
+control: watermark
+min_temp: 0
+max_temp: 60
+target_temp: 40
+gcode_id: D
+kick_start_time: 0.5
+
+[temperature_fan electronics]
+pin: PB2 
 sensor_type: temperature_mcu
 control: watermark
 min_temp: 0
@@ -293,20 +338,13 @@ target_temp: 40
 gcode_id: S
 kick_start_time: 0.5
 
-[fan_generic exhaust]
-##  FAN0 Connector
-pin: PB3
-max_power: 1.0
-shutdown_speed: 0.0
-kick_start_time: 0.2
-
 #####################################################################
 #	LED Control
 #####################################################################
 
 [output_pin caselight]
 ##  Chamber Lighting - In E1 OUT Position
-pin: PC8
+pin: PB15
 pwm: true
 value: 0.25
 shutdown_value: 0
@@ -339,29 +377,12 @@ value: 240
 shutdown_value: 0
 scale: 255
 
-
-#####################################################################
-#	Temperature sensors
-#####################################################################
-
-[temperature_sensor raspberry_pi]
-sensor_type: temperature_host
-
-#[temperature_sensor Spider]
-#sensor_type: temperature_mcu
-
-[temperature_sensor chamber]
-sensor_type: NTC 100K MGB18-104F39050L32
-sensor_pin: PC1
-min_temp: 0
-max_temp: 80
-
 #####################################################################
 #	Probe
 #####################################################################
 
 [probe]
-pin: PA3
+pin: sht36:PA0
 x_offset: 0
 y_offset: 20
 z_offset: 6.42
@@ -423,6 +444,7 @@ fade_start: 1
 fade_end: 5
 probe_count: 7,7
 algorithm: bicubic
+bicubic_tension: 0.2
 relative_reference_index: 24
 
 #####################################################################
@@ -478,15 +500,15 @@ gcode:
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 39.224
-#*# pid_ki = 1.239
-#*# pid_kd = 310.362
+#*# pid_kp = 38.414
+#*# pid_ki = 1.377
+#*# pid_kd = 267.938
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 28.616
-#*# pid_ki = 1.783
-#*# pid_kd = 114.824
+#*# pid_kp = 26.850
+#*# pid_ki = 1.673
+#*# pid_kd = 107.739
 #*#
 #*# [stepper_z]
 #*# position_endstop = -0.5
@@ -504,11 +526,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.006250, 0.028125, 0.028125, 0.018125, 0.016875
-#*# 	  -0.003750, 0.008750, 0.010000, -0.002500, 0.005625
-#*# 	  0.000000, -0.004375, 0.000000, -0.001250, 0.006250
-#*# 	  0.008750, 0.008750, 0.004375, -0.005625, 0.016875
-#*# 	  -0.009375, -0.016875, -0.029375, -0.032500, 0.002500
+#*# 	-0.006250, 0.028125, 0.028125, 0.018125, 0.016875
+#*# 	-0.003750, 0.008750, 0.010000, -0.002500, 0.005625
+#*# 	0.000000, -0.004375, 0.000000, -0.001250, 0.006250
+#*# 	0.008750, 0.008750, 0.004375, -0.005625, 0.016875
+#*# 	-0.009375, -0.016875, -0.029375, -0.032500, 0.002500
 #*# tension = 0.2
 #*# min_x = 30.0
 #*# algo = bicubic
