--- a/klipper-config/klicky-probe.cfg
+++ b/klipper-config/klicky-probe.cfg
@@ -348,29 +348,30 @@ gcode:
 #    Dock_Probe
 
 # Bed Mesh Calibrate
-[bed_mesh]
+#[bed_mesh]
 
-[gcode_macro BED_MESH_CALIBRATE]
-rename_existing:             _BED_MESH_CALIBRATE
-description: Perform Mesh Bed Leveling with klicky automount
-gcode:
-    STATUS_MESHING
-    M117 Bed meshing
-    {% set V = printer["gcode_macro _User_Variables"].verbose %}
-    {% if V %}
-        { action_respond_info("Bed Mesh Calibrate") }
-    {% endif %}
 
-    _CheckProbe action=query
-    Attach_Probe
-
-    _BED_MESH_CALIBRATE {% for p in params
-           %}{'%s=%s ' % (p, params[p])}{%
-          endfor %}
-
-    Dock_Probe
-    STATUS_READY
-    M117 Meshing done
+#[gcode_macro BED_MESH_CALIBRATE]
+#rename_existing: _BED_MESH_CALIBRATE
+#description: Perform Mesh Bed Leveling with klicky automount
+#gcode:
+#    STATUS_MESHING
+#    M117 Bed meshing
+#    {% set V = printer["gcode_macro _User_Variables"].verbose %}
+#    {% if V %}
+#        { action_respond_info("Bed Mesh Calibrate") }
+#    {% endif %}
+#
+#    _CheckProbe action=query
+#    Attach_Probe
+#
+#    _BED_MESH_CALIBRATE {% for p in params
+#           %}{'%s=%s ' % (p, params[p])}{%
+#          endfor %}
+#
+#    Dock_Probe
+#    STATUS_READY
+#    M117 Meshing done
 
 
 # Probe Calibrate
