--- a/klipper-config/moonraker.conf
+++ b/klipper-config/moonraker.conf
@@ -1,9 +1,14 @@
 [server]
 host: 0.0.0.0
 port: 7125
-enable_debug_logging: False
+
+[file_manager]
 config_path: ~/klipper_config
 log_path: ~/klipper_logs
+
+[data_store]
+temperature_store_size: 600
+gcode_store_size: 1000
 
 [authorization]
 cors_domains:
@@ -32,12 +37,14 @@ trusted_clients:
 [update_manager]
 
 [update_manager mainsail]
-type: web_beta
+type: web
+channel: beta
 repo: meteyou/mainsail
 path: ~/mainsail
 
 [update_manager client z_calibration]
 type: git_repo
-path: /home/pi/klipper_z_calibration
-origin: github.com/protoloft/klipper_z_calibration.git
+path: ~/klipper_z_calibration
+origin: https://github.com/protoloft/klipper_z_calibration.git
 install_script: install.sh
+managed_services: klipper
